<resources>
    <string name="app_name">Samogon peregon</string>
    <string name="strAclRAW">Alc. RAW, %</string>
    <string name="strRAW_V">Vol. RAW, ml</string>
    <string name="strWater_V">Vol. water, ml</string>
    <string name="strInitCube">Parameters of the distillation cube</string>
    <string name="strAlcInCube">Alc. in the distillation cube:</string>
    <string name="strVolAbsAlcCur">Volume AA in the distillation cube:</string>
    <string name="strVolAbsAlc">Vol. Absolute alcohol, ml</string>
    <string name="strTitleFractions">Fractions</string>
    <string name="strCalculateCube">Calculate</string>
    <string name="AlcInCubeCur">Alc in the distillation cube, %</string>
    <string name="strHeads">Heads</string>
    <string name="strAfterHeads">After heads</string>
    <string name="strBody">Body</string>
    <string name="strBeforeTails">Before tails</string>
    <string name="strTails">Tails</string>
    <string name="strHeadsBTN">Heads</string>
    <string name="strAfterHeadsBTN">After heads</string>
    <string name="strBodyBTN">Body</string>
    <string name="strBeforeTailsBTN">Before tails</string>
    <string name="strTailsBTN">Tails</string>
    <string name="str3Dots">...</string>
    <string name="strVolume">Volume</string>
    <string name="strAlc">Alcohol</string>
    <string name="strHeadsFraction">Heads Fractions</string>
    <string name="strAHeadsFraction">After heads Fractions</string>
    <string name="strBodyFraction">Body Fractions</string>
    <string name="strBeforeTailFraction">Before tails Fraction</string>
    <string name="strTailsFraction">Tails Fraction</string>
    <string name="strSave">Save</string>
    <string name="strCubeBottomBalance">Bottom Balance the distillation cube:</string>
    <string name="strPercent">%</string>
    <string name="strMl">ml</string>
    <string name="strCubeBotton">Cube bottoms</string>
    <string name="strAbsAlcohol">AA</string>
    <string name="strComma">,</string>
    <string name="strSpace">" "</string>
    <string name="strPrcAA">% Of AA</string>
    <string name="strSelect">Selected</string>
    <string name="strQuit">Quit</string>
    <string name="strClear">Clear data</string>
    <string name="strInfo">Info</string>
    <string name="str_100">100</string>
    <string name="str_93">93</string>
    <string name="str_0">0</string>
    <string name="str_27">27</string>
    <string name="str_1000">1000</string>
</resources>
