<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.danilovav.moonshinedistiller.MainActivity">

    <item
        android:id="@+id/menuClear"
        android:icon="@drawable/ic_action_clear_w"
        android:title="@string/strClear"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuInfo"
        android:icon="@drawable/ic_action_info_w"
        android:title="@string/strInfo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuExit"
        android:icon="@drawable/ic_action_exit_w"
        android:title="@string/strQuit"
        app:showAsAction="ifRoom" />
</menu>