<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danilovav.moonshinedistiller.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tvBeforeTails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strBeforeTails"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvBeforeTailsOut"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tvBody" />

    <TextView
        android:id="@+id/tvBeforeTailsOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/strBeforeTailsBTN"

        app:layout_constraintRight_toLeftOf="@+id/dotbtnBeforeTails"
        app:layout_constraintBaseline_toBaselineOf="@+id/dotbtnBeforeTails"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/dotbtnBeforeTails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick3dotButton"
        android:text="@string/str3Dots"
        app:layout_constraintLeft_toLeftOf="@+id/dotbtnBody"
        app:layout_constraintRight_toRightOf="@+id/dotbtnBody"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/dotbtnTails" />

    <TextView
        android:id="@+id/tvAlc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/strAclRAW"
        app:layout_constraintLeft_toRightOf="@+id/edtAlcV"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edtAlcV" />

    <EditText
        android:id="@+id/edtAlc01"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="31dp"
        android:layout_marginStart="27dp"
        android:ems="10"
        android:hint="27"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvAlc"
        app:layout_constraintLeft_toRightOf="@+id/tvAlc"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/tvAlcV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/strRAW_V"
        tools:layout_constraintTop_creator="1"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvInitCube" />

    <EditText
        android:id="@+id/edtAlcV"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="1000"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvAlcV"
        app:layout_constraintLeft_toRightOf="@+id/tvAlcV"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/tvWaterV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:text="@string/strWater_V"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAlcV"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/edtWaterV"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="0"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/edtAlcV"
        app:layout_constraintTop_toBottomOf="@+id/edtAlcV"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/tvInitCube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/strInitCube"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/tvAlcInCube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strAlcInCube"
        app:layout_constraintRight_toLeftOf="@+id/edtWaterV"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtWaterV"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/edtWaterV" />

    <TextView
        android:id="@+id/tvVolAbsAlc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/strVolAbsAlcCur"
        app:layout_constraintLeft_toLeftOf="@+id/tvAlcInCube"
        app:layout_constraintTop_toBottomOf="@+id/tvAlcInCube"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/tvAlcInCubeOut"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/tvAlcInCube"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvAlcInCube" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />
    <TextView
        android:id="@+id/tvCurSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTitleFractions"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/tvHeads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strHeads"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvHeadsOut"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tvAfterHeads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strAfterHeads"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvAfterHeadsOut"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tvHeads" />

    <TextView
        android:id="@+id/tvHeadsOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/strHeadsBTN"
        app:layout_constraintRight_toLeftOf="@+id/dotbtnHeads"
        android:layout_marginRight="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/dotbtnHeads"
        tools:layout_constraintBaseline_creator="1" />

    <TextView
        android:id="@+id/tvAfterHeadsOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:text="@string/strAfterHeadsBTN"
        app:layout_constraintRight_toLeftOf="@+id/dotbtnAfterHeads"
        android:layout_marginRight="7dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/dotbtnAfterHeads"
        tools:layout_constraintBaseline_creator="1" />

    <TextView
        android:id="@+id/tvBodyOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:text="@string/strBodyBTN"
        app:layout_constraintRight_toLeftOf="@+id/dotbtnBody"
        android:layout_marginRight="7dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/dotbtnBody"
        tools:layout_constraintBaseline_creator="1" />

    <TextView
        android:id="@+id/tvVolAbsAlcOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvVolAbsAlc"
        app:layout_constraintLeft_toRightOf="@+id/tvVolAbsAlc"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/dotbtnAfterHeads"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick3dotButton"
        android:text="@string/str3Dots"
        app:layout_constraintLeft_toLeftOf="@+id/dotbtnHeads"
        app:layout_constraintRight_toRightOf="@+id/dotbtnHeads"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/dotbtnBody" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strBody"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvBodyOut"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tvAfterHeads" />

    <Button
        android:id="@+id/dotbtnBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick3dotButton"
        android:text="@string/str3Dots"
        app:layout_constraintLeft_toLeftOf="@+id/dotbtnAfterHeads"
        app:layout_constraintRight_toRightOf="@+id/dotbtnAfterHeads"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/dotbtnBeforeTails" />

    <Button
        android:id="@+id/dotbtnHeads"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:onClick="onClick3dotButton"
        android:text="@string/str3Dots"
        app:layout_constraintBottom_toTopOf="@+id/dotbtnAfterHeads"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/tvTails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTails"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvTailsOut"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tvBeforeTails" />

    <TextView
        android:id="@+id/tvTailsOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
         android:text="@string/strTailsBTN"
        app:layout_constraintRight_toLeftOf="@+id/dotbtnTails"
        app:layout_constraintBaseline_toBaselineOf="@+id/dotbtnTails"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/tvCubeBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/strCubeBottomBalance"
        app:layout_constraintLeft_toLeftOf="@+id/tvVolAbsAlc"
        app:layout_constraintTop_toBottomOf="@+id/tvVolAbsAlc" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintLeft_toLeftOf="@+id/tvCubeBottom"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvCubeBottom" />

    <Button
        android:id="@+id/dotbtnTails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:onClick="onClick3dotButton"
        android:text="@string/str3Dots"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/dotbtnBeforeTails"
        app:layout_constraintRight_toRightOf="@+id/dotbtnBeforeTails"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
