<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danilovav.moonshinedistiller.FractionsActivity">

    <android.support.constraint.ConstraintLayout
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
     android:id="@+id/tvTitle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/strHeadsFraction"
     app:layout_constraintTop_toTopOf="parent"
     android:layout_marginTop="16dp"
     android:layout_marginRight="8dp"
     app:layout_constraintRight_toRightOf="parent"
     android:layout_marginLeft="8dp"
     app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <TextView
        android:id="@+id/tvVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strVolume"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintTop_toTopOf="@+id/view2"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvAlc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strAlc"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintTop_toTopOf="@+id/view2"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etdVolume01"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/str_100"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/tvVolume"
        app:layout_constraintRight_toRightOf="@+id/tvVolume"
        app:layout_constraintTop_toBottomOf="@+id/tvVolume"
        android:nextFocusDown="@+id/edtAlc01"/>

    <EditText
        android:id="@+id/edtAlc01"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/str_93"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/tvAlc"
        app:layout_constraintRight_toRightOf="@+id/tvAlc"
        app:layout_constraintTop_toBottomOf="@+id/tvAlc"
        app:layout_constraintHorizontal_bias="0.512"
        android:nextFocusDown="@+id/etdVolume02"/>

    <EditText
        android:id="@+id/etdVolume02"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/etdVolume01"
        app:layout_constraintRight_toRightOf="@+id/etdVolume01"
        app:layout_constraintTop_toBottomOf="@+id/etdVolume01"
        android:nextFocusDown="@+id/edtAlc02"/>

    <EditText
        android:id="@+id/edtAlc02"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/edtAlc01"
        app:layout_constraintRight_toRightOf="@+id/edtAlc01"
        app:layout_constraintTop_toBottomOf="@+id/edtAlc01"
        android:nextFocusDown="@+id/etdVolume03"/>

    <EditText
        android:id="@+id/etdVolume03"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/etdVolume02"
        app:layout_constraintRight_toRightOf="@+id/etdVolume02"
        app:layout_constraintTop_toBottomOf="@+id/etdVolume02"
        android:nextFocusDown="@+id/edtAlc03"/>

    <EditText
        android:id="@+id/edtAlc03"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/edtAlc02"
        app:layout_constraintRight_toRightOf="@+id/edtAlc02"
        app:layout_constraintTop_toBottomOf="@+id/edtAlc02"
        app:layout_constraintHorizontal_bias="0.0"
        android:nextFocusDown="@+id/etdVolume04"/>

    <EditText
        android:id="@+id/etdVolume04"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/etdVolume03"
        app:layout_constraintRight_toRightOf="@+id/etdVolume03"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etdVolume03"
        android:nextFocusDown="@+id/edtAlc04"/>

    <EditText
        android:id="@+id/edtAlc04"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtAlc03"
        app:layout_constraintLeft_toLeftOf="@+id/edtAlc03"
        app:layout_constraintRight_toRightOf="@+id/edtAlc03"
        android:nextFocusDown="@+id/etdVolume05"/>

        <EditText
          android:id="@+id/etdVolume05"
          android:layout_width="88dp"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="numberDecimal"
          app:layout_constraintLeft_toLeftOf="@+id/etdVolume04"
          app:layout_constraintRight_toRightOf="@+id/etdVolume04"
          android:layout_marginTop="8dp"
          app:layout_constraintTop_toBottomOf="@+id/etdVolume04"
          app:layout_constraintHorizontal_bias="0.0"
          android:nextFocusDown="@+id/edtAlc05"/>

        <EditText
        android:id="@+id/edtAlc05"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtAlc04"
        app:layout_constraintLeft_toLeftOf="@+id/edtAlc04"
        app:layout_constraintRight_toRightOf="@+id/edtAlc04"
        app:layout_constraintHorizontal_bias="0.0"
        android:nextFocusDown="@+id/btnSave"/>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strSave"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/edtFractionPercent"
        android:id="@+id/view2"
        app:layout_constraintBottom_toBottomOf="@+id/edtAlc05" />

    <EditText
        android:id="@+id/edtFractionPercent"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/str_100"
        android:inputType="number"
        android:text="@string/str_100"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tvTitle"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="8dp"
        android:nextFocusDown="@+id/etdVolume01"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strPrcAA"
        app:layout_constraintLeft_toRightOf="@+id/edtFractionPercent"
        app:layout_constraintBaseline_toBaselineOf="@+id/edtFractionPercent"
        tools:ignore="RtlHardcoded" />

</android.support.constraint.ConstraintLayout>
</ScrollView>