<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danilovav.moonshinedistiller.HeadsActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
     android:id="@+id/tvTitle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/strHeadsFraction"
     app:layout_constraintTop_toTopOf="parent"
     android:layout_marginTop="16dp"
     android:layout_marginRight="8dp"
     app:layout_constraintRight_toRightOf="parent"
     android:layout_marginLeft="8dp"
     app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />


    <TextView
        android:id="@+id/tvVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strVolume"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintTop_toTopOf="@+id/view2"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvAlc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strAlc"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintTop_toTopOf="@+id/view2"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etdVolume01"
        android:layout_width="88dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="100"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/tvVolume"
        app:layout_constraintRight_toRightOf="@+id/tvVolume"
        app:layout_constraintTop_toBottomOf="@+id/tvVolume" />

    <EditText
        android:id="@+id/edtAlc01"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="93"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/tvAlc"
        app:layout_constraintRight_toRightOf="@+id/tvAlc"
        app:layout_constraintTop_toBottomOf="@+id/tvAlc"
        app:layout_constraintHorizontal_bias="0.512" />

    <EditText
        android:id="@+id/etdVolume02"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="0"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/etdVolume01"
        app:layout_constraintRight_toRightOf="@+id/etdVolume01"
        app:layout_constraintTop_toBottomOf="@+id/etdVolume01" />

    <EditText
        android:id="@+id/edtAlc02"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="0"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/edtAlc01"
        app:layout_constraintRight_toRightOf="@+id/edtAlc01"
        app:layout_constraintTop_toBottomOf="@+id/edtAlc01" />

    <EditText
        android:id="@+id/etdVolume03"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="0"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/etdVolume02"
        app:layout_constraintRight_toRightOf="@+id/etdVolume02"
        app:layout_constraintTop_toBottomOf="@+id/etdVolume02" />

    <EditText
        android:id="@+id/edtAlc03"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="0"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/edtAlc02"
        app:layout_constraintRight_toRightOf="@+id/edtAlc02"
        app:layout_constraintTop_toBottomOf="@+id/edtAlc02" />

    <EditText
        android:id="@+id/etdVolume04"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="0"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/etdVolume03"
        app:layout_constraintRight_toRightOf="@+id/etdVolume03"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etdVolume03" />

    <EditText
        android:id="@+id/edtAlc04"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="0"
        android:inputType="numberDecimal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtAlc03"
        app:layout_constraintLeft_toLeftOf="@+id/edtAlc03"
        app:layout_constraintRight_toRightOf="@+id/edtAlc03" />

    <EditText
        android:id="@+id/edtAlc05"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="0"
        android:inputType="numberDecimal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtAlc04"
        app:layout_constraintLeft_toLeftOf="@+id/edtAlc04"
        app:layout_constraintRight_toRightOf="@+id/edtAlc04" />

    <EditText
        android:id="@+id/etdVolume05"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="0"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/etdVolume04"
        app:layout_constraintRight_toRightOf="@+id/etdVolume04"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etdVolume04"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strSave"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp" />

    <View
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/edtFractionPercent"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        android:id="@+id/view2" />

    <EditText
        android:id="@+id/edtFractionPercent"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="100"
        android:inputType="number"
        android:text="100"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tvTitle"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvTitle" />

</android.support.constraint.ConstraintLayout>
